# starkverifier

./: .gitignore  README.md  package.json  pnpm-lock.yaml
app/: layout.tsx  page.tsx  providers.tsx
components/: BenchmarkTable.tsx  ConnectWallet.tsx  GasComparison.tsx  L2ComputationChart.tsx  VerifyPanel.tsx
components/ui/: sonner.tsx
contracts/solidity/: foundry.toml
contracts/solidity/script/: Deploy.s.sol
contracts/solidity/src/: Poseidon.sol  StarkVerifier.sol
contracts/solidity/test/: Poseidon.t.sol
contracts/stylus/: Cargo.toml
contracts/stylus/src/: lib.rs  main.rs  merkle.rs
contracts/stylus/src/poseidon/: constants.rs  field.rs  mod.rs
lib/: chains.ts  client.ts  contracts.ts  gas-context.tsx  gas-utils.ts
scripts/: deploy-all.sh  deploy-solidity.sh  deploy-stylus.sh
