[package]
name = "stark-verifier"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
stylus-sdk = "0.9.0"
alloy-primitives = { version = "0.8", default-features = false }
alloy-sol-types = { version = "0.8", default-features = false }
ruint = "=1.12.3"
mini-alloc = "0.6"
hex = { version = "0.4.3", default-features = false, features = ["alloc"] }

[dev-dependencies]
tokio = { version = "1.12.0", features = ["full"] }
ethers = "2.0"
eyre = "0.6.8"

[features]
default = []
export-abi = ["stylus-sdk/export-abi"]

[lib]
crate-type = ["lib", "cdylib"]

[[bin]]
name = "stark-verifier"
path = "src/main.rs"

[profile.release]
codegen-units = 1
strip = true
lto = true
panic = "abort"
opt-level = "s"
